// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompareListComponent matches snapshot 1`] = `
<div
  className="usa-grid-full content-container"
>
  <div>
    <Connect(withRouter(BackButton)) />
  </div>
  <div
    className="comparison-container"
  >
    <div
      className="comparison-table-container"
    >
      <table
        className="tm-table"
      >
        <caption
          className="usa-sr-only"
        >
          Position details comparison:
        </caption>
        <thead>
          <tr>
            <th
              scope="row"
            >
              Position
              <div
                className="border-extension border-visible"
              />
            </th>
            <th>
              <div
                className="column-title-main"
              >
                OMS (DCM)
              </div>
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/10034001"
                >
                  View position
                </Link>
              </div>
              <div
                className="border-extension"
              />
            </th>
            <th>
              <div
                className="column-title-main"
              >
                SPECIAL AGENT
              </div>
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/56082000"
                >
                  View position
                </Link>
              </div>
              <div
                className="border-extension"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              scope="row"
            >
              Position number
              <div
                className="border-extension-layer-2 border-visible-layer-2"
              />
            </th>
            <td>
              <span
                aria-labelledby="1 0 0 3 4 0 0 1"
              >
                10034001
              </span>
              <div
                className="border-extension-layer-2"
              />
            </td>
            <td>
              <span
                aria-labelledby="5 6 0 8 2 0 0 0"
              >
                56082000
              </span>
              <div
                className="border-extension-layer-2"
              />
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Skill code
            </th>
            <td>
              None listed
            </td>
            <td>
              SECURITY (2501)
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Bureau
            </th>
            <td>
              None listed
            </td>
            <td>
              (WHA) BUREAU OF WESTERN HEMISPHERIC AFFAIRS
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Post
            </th>
            <td>
              Freetown, Sierra Leone
            </td>
            <td>
              Chicago, IL
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Tour of duty
            </th>
            <td>
              None listed
            </td>
            <td>
              2 YRS (2 R & R)
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Language
            </th>
            <td>
              <LanguageList
                languages={Array []}
                propToUse="representation"
              />
            </td>
            <td>
              <LanguageList
                languages={
                  Array [
                    Object {
                      "id": 1,
                      "language": "French (FR)",
                      "reading_proficiency": "2",
                      "representation": "French (FR) 2/2",
                      "spoken_proficiency": "2",
                    },
                    Object {
                      "id": 20,
                      "language": "Haitian Creole (HC)",
                      "reading_proficiency": "0",
                      "representation": "Haitian Creole (HC) 0/0",
                      "spoken_proficiency": "0",
                    },
                  ]
                }
                propToUse="representation"
              />
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Post differential
            </th>
            <td>
              30%
            </td>
            <td>
              20%
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Danger pay
            </th>
            <td>
              0%
            </td>
            <td>
              15%
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              TED
            </th>
            <td>
              None listed
            </td>
            <td>
              03/13/2020
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="border-bottom-extension"
      />
    </div>
  </div>
</div>
`;

exports[`CompareListComponent matches snapshot when isLoading is true 1`] = `
<div
  className="usa-grid-full content-container"
>
  <div>
    <Connect(withRouter(BackButton)) />
  </div>
  <div
    className="comparison-container"
  >
    <Spinner
      size="big"
      type="homepage-position-results"
    />
  </div>
</div>
`;

exports[`CompareListComponent matches snapshot when there is an obc id 1`] = `
<div
  className="usa-grid-full content-container"
>
  <div>
    <Connect(withRouter(BackButton)) />
  </div>
  <div
    className="comparison-container"
  >
    <div
      className="comparison-table-container"
    >
      <table
        className="tm-table"
      >
        <caption
          className="usa-sr-only"
        >
          Position details comparison:
        </caption>
        <thead>
          <tr>
            <th
              scope="row"
            >
              Position
              <div
                className="border-extension border-visible"
              />
            </th>
            <th>
              <div
                className="column-title-main"
              >
                OMS (DCM)
              </div>
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/10034001"
                >
                  View position
                </Link>
              </div>
              <div
                className="border-extension"
              />
            </th>
            <th>
              <div
                className="column-title-main"
              >
                SPECIAL AGENT
              </div>
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/56082000"
                >
                  View position
                </Link>
              </div>
              <div
                className="border-extension"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              scope="row"
            >
              Position number
              <div
                className="border-extension-layer-2 border-visible-layer-2"
              />
            </th>
            <td>
              <span
                aria-labelledby="1 0 0 3 4 0 0 1"
              >
                10034001
              </span>
              <div
                className="border-extension-layer-2"
              />
            </td>
            <td>
              <span
                aria-labelledby="5 6 0 8 2 0 0 0"
              >
                56082000
              </span>
              <div
                className="border-extension-layer-2"
              />
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Skill code
            </th>
            <td>
              None listed
            </td>
            <td>
              SECURITY (2501)
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Bureau
            </th>
            <td>
              None listed
            </td>
            <td>
              (WHA) BUREAU OF WESTERN HEMISPHERIC AFFAIRS
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Post
            </th>
            <td>
              Freetown, Sierra Leone
            </td>
            <td>
              Chicago, IL
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Tour of duty
            </th>
            <td>
              None listed
            </td>
            <td>
              2 YRS (2 R & R)
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Language
            </th>
            <td>
              <LanguageList
                languages={Array []}
                propToUse="representation"
              />
            </td>
            <td>
              <LanguageList
                languages={
                  Array [
                    Object {
                      "id": 1,
                      "language": "French (FR)",
                      "reading_proficiency": "2",
                      "representation": "French (FR) 2/2",
                      "spoken_proficiency": "2",
                    },
                    Object {
                      "id": 20,
                      "language": "Haitian Creole (HC)",
                      "reading_proficiency": "0",
                      "representation": "Haitian Creole (HC) 0/0",
                      "spoken_proficiency": "0",
                    },
                  ]
                }
                propToUse="representation"
              />
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Post differential
            </th>
            <td>
              30%
              <span>
                 | 
                <OBCUrl
                  altStyle={false}
                  id={1}
                  isButton={false}
                  label="View OBC Data"
                  type="post-data"
                />
              </span>
            </td>
            <td>
              20%
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Danger pay
            </th>
            <td>
              0%
              <span>
                 | 
                <OBCUrl
                  altStyle={false}
                  id={1}
                  isButton={false}
                  label="View OBC Data"
                  type="post"
                />
              </span>
            </td>
            <td>
              15%
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              TED
            </th>
            <td>
              None listed
            </td>
            <td>
              03/13/2020
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="border-bottom-extension"
      />
    </div>
  </div>
</div>
`;
